refactor(db)! update db scheme (#18)
* refactor(db)! update db scheme

* fix: sonar issues