@@ -19,7 +19,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/configurations")
@@ -37,8 +36,8 @@ public class ConfigurationController {
     public ResponseEntity<ConfigurationDTO> createConfiguration(
             @Valid @RequestBody ConfigurationDTO configDTO) {
 
-        Country country = countryRepository.findByCode(configDTO.getCountryCode())
-            .orElseThrow(() -> new IllegalArgumentException("Country not found: " + configDTO.getCountryCode()));
+        Country country = countryRepository.findById(configDTO.getCountryId())
+            .orElseThrow(() -> new IllegalArgumentException("Country not found with ID: " + configDTO.getCountryId()));
 
         Configuration config = mapper.toConfigurationEntity(configDTO, country);
         Configuration saved = configService.createConfiguration(config);
@@ -79,7 +78,7 @@ public class ConfigurationController {
         List<ConfigurationAuditDTO> audits = configService.getAuditHistory(config.getId())
             .stream()
             .map(mapper::toConfigurationAuditDTO)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(audits);
     }
 }
